--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo1"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
@@ -31,6 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
@@ -40,6 +41,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.jshikami235gmail.pataride.Splash_screen" />
         </activity>
+
         <activity
             android:name=".Sign_up"
             android:label="@string/title_activity_sign_up"
@@ -49,6 +51,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.jshikami235gmail.pataride.MainActivity" />
         </activity>
+
         <activity
             android:name=".Login"
             android:label="@string/title_activity_login"
@@ -68,17 +71,20 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBXur9RaTjqrNHoZx1mpV72Rw7zqGPo0wI" />
+            android:value="AIzaSyA4EleuYK5LLeQbJ7ngSL5jzCfpHdFjErs" />
 
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" >
         </activity>
+
         <activity
             android:name=".Pay"
             android:label="@string/title_activity_pay"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+
+
         <activity
             android:name=".thanks"
             android:label="@string/title_activity_thanks"
@@ -88,6 +94,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.jshikami235gmail.pataride.Pay" />
         </activity>
+
+        <!-- Enables the Android Pay API -->
+        <meta-data
+            android:name="com.google.android.gms.wallet.api.enabled"
+            android:value="true" />
     </application>
 
 </manifest>
