--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
     compile 'com.google.android.gms:play-services:8.1.0'
+     /*volley library support */
+    compile 'com.android.support:appcompat-v7:23.0.3'
+    compile 'com.android.support:support-v4:23.1.0'
+    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
+
 }
