--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
      /*volley library support */
     compile 'com.android.support:appcompat-v7:23.0.3'
     compile 'com.android.support:support-v4:23.1.0'
-    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
 
 
 
