--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,11 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".AppController"
         android:allowBackup="true"
         android:icon="@drawable/logo1"
         android:label="@string/app_name"
@@ -89,6 +91,11 @@
         <activity
             android:name=".Welcome"
             android:label="@string/title_activity_welcome"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".SignupTrial"
+            android:label="@string/title_activity_signup_trial"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
