--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
     <application
         android:name=".AppController"
         android:allowBackup="true"
-        android:icon="@drawable/logo1"
+        android:icon="@drawable/icon1"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
@@ -62,7 +62,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyA4EleuYK5LLeQbJ7ngSL5jzCfpHdFjErs" />
+            android:value="AIzaSyDUhvmgRHQXwLP2f9BOLpW_FHU7l30BNHg" />
 
         <activity
             android:name=".MapsActivity"
